XMLtoCSV/objects/unpackaged/objects/Focus_Area_vod__c.object
<CustomObject>
    <description>Areas that KOLs provide expertise.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the account that this focus area belongs to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Focus Areas (Account)</relationshipLabel>
        <relationshipName>Focus_Areas_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Trials_Focus_Score_vod__c</fullName>
        <description>A focus score that indicates the degree of focus this KOL has for this area in clinical trials.</description>
        <label>Clinical Trials Focus Score</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Events_Focus_Score_vod__c</fullName>
        <description>A focus score that indicates the degree of focus this KOL has for this area in events.</description>
        <label>Events Focus Score</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Focus_Area_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup from Focus Area to Account</description>
        <label>Focus Area Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Focus Areas</relationshipLabel>
        <relationshipName>Focus_Areas2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Focus_Name_vod__c</fullName>
        <description>Text field to store the name of the area of focus</description>
        <label>Focus Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Focus_Score_vod__c</fullName>
        <description>The highest focus score received for this focus area across all KOLs.</description>
        <label>High Focus Score</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publications_Focus_Score_vod__c</fullName>
        <description>A focus score that indicates the degree of focus this KOL has for this area in publications.</description>
        <label>Publications Focus Score</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name_vod__c</fullName>
        <label>Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Focus_Score_vod__c</fullName>
        <description>= Publications_Focus_Score_vod__c + Clinical_Trials_Focus_Score_vod__c + Events_Focus_Score_vod__c</description>
        <formula>Publications_Focus_Score_vod__c + Clinical_Trials_Focus_Score_vod__c +  Events_Focus_Score_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Focus Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Focus Area</label>
    <nameField>
        <displayFormat>FA-{00000}</displayFormat>
        <label>Focus Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Focus Areas</pluralLabel>
    <recordTypes>
        <fullName>KOL_Focus_Area_vod</fullName>
        <active>true</active>
        <description>Used for KOL Focus Areas</description>
        <label>KOL_Focus_Area_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>